# bigluca

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
artifacts/dubai-papi/: 0001-Beatuful-Holly.metadata.json  0001-Beautiful-Holly.json  0001-Old-Flavio.json  0002-Big-Aminta.json  0002-Handsome-Amos.json  0003-Golden-Frederick.json  0003-Good-Slade.json  0003-Holy-Mostafa.json  0004-Good-Rozina.json  0004-Strange-Florencio.json  0004-Strange-Zain.json  0005-Golden-Wednesday.json  0005-Hot-Janetta.json  0005-Pretty-Vincent.json  0006-Pretty-Ardith.json  0006-Sweet-Angelos.json  0006-Tiny-Roseann.json  0007-Lil-Yocheved.json  0007-Strong-Rahman.json  0007-Young-Reena.json  0008-Beautiful-Tarina.json  (+191 more)
bigluca/: Cargo.toml
bigluca/src/: app.rs  args.rs  main.rs
bigluca/src/config/: dubai_papi.rs  mod.rs
bigluca/src/database/: mod.rs  names.rs  nft.rs
bigluca/src/generator/: collection.rs  mod.rs
bigluca/src/generator/dubai_papi/: attributes.rs  description.rs  mod.rs
bigluca/src/generator/dubai_papi/attributes/: background.rs  beard.rs  car.rs  car_color.rs  ear_pods.rs  eyes.rs  gender.rs  glasses.rs  hair_color.rs  hair_style.rs  hat.rs  hat_color.rs  head_phones.rs  mood.rs  skin.rs  top.rs
bigluca/src/nft/: metadata.rs  mod.rs
bigluca/src/render/: layer.rs  mod.rs
bigluca/src/utils/: collisions.rs  mod.rs  random.rs  serde.rs
bigluca/test/: config.json
bigluca_derive/: Cargo.toml
bigluca_derive/src/: lib.rs
config/: config.json
database/: db.debug.json  db.json
src/: args.rs  main.rs
(+216 files in other folders)
