[package]
authors = ["Christian Visintin <cryptopapies@gmail.com>"]
description = "Cryptopapies NFT generator"
edition = "2021"
homepage = "https://cryptopapies.io/"
include = ["src/**/*", "../LICENSE", "../README.md", "../CHANGELOG.md"]
keywords = ["nft", "cryptopapies", "generator"]
name = "bigluca"
readme = "README.md"
repository = "https://github.com/cryptopapies/bigluca"
version = "0.1.2"

[[bin]]
name = "bigluca"
path = "src/main.rs"

[dependencies]
bigluca_derive = { path = "../bigluca_derive", version = "^0.1" }
anyhow = "^1.0"
argh = "^0.1.9"
chrono = { version = "^0.4", features = [ "serde" ] }
data-encoding = "^2.3"
dirs = "^4.0"
env_logger = "^0.9"
image = { version = "^0.24", default-features = false, features = [ "png" ] }
log = "^0.4"
rand = "^0.8"
ring = "^0.16"
serde = { version = "^1", features = [ "derive" ] }
serde_json = "^1.0"
thiserror = "^1"

[dev-dependencies]
pretty_assertions = "^1.3"
serial_test = "^0.9"
tempfile = "^3.2"

[features]
default = [ ]
github-actions = [ ]
